--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,6 +32,7 @@
     {
       "path": "sass/main.scss",
       "imports": [
+        "sass/helpers/_reset.scss",
         "sass/helpers/_variables.scss",
         "sass/helpers/_mixins.scss",
         "sass/helpers/_placeholders.scss",
@@ -41,9 +42,12 @@
         "sass/base/_icons.scss",
         "sass/base/_typography.scss",
         "sass/base/_grid.scss",
+        "sass/base/_layout.scss",
         "sass/modules/_forms.scss",
         "sass/modules/_buttons.scss",
         "sass/modules/_modals.scss",
+        "sass/modules/_top-panel.scss",
+        "sass/modules/_aside-panel.scss",
         "sass/pages/_home.scss"
       ]
     }
@@ -94,8 +98,8 @@
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
-      "enable": false,
-      "url": ""
+      "enable": true,
+      "url": "http://zabava-v/"
     }
   },
   "browser-sync": {
