--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,10 +2,16 @@
   "name": "zabava-v",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "js-dev/assets.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"js/assets.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
-      "sass"
+      "sass",
+      "js-dev"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -26,7 +32,9 @@
         "js-dev/vendors/maskedinput.js",
         "js-dev/vendors/jquery.fancybox.min.js",
         "js-dev/vendors/device.min.js",
-        "js-dev/vendors/waypoints.js"
+        "js-dev/vendors/waypoints.js",
+        "js-dev/vendors/simplebar.js",
+        "js-dev/vendors/slick.min.js"
       ]
     },
     {
@@ -37,6 +45,8 @@
         "sass/helpers/_mixins.scss",
         "sass/helpers/_placeholders.scss",
         "sass/vendors/_fancybox.scss",
+        "sass/vendors/_simplebar.scss",
+        "sass/vendors/_slick.scss",
         "sass/base/_reset.scss",
         "sass/base/_fonts.scss",
         "sass/base/_icons.scss",
@@ -46,8 +56,19 @@
         "sass/modules/_forms.scss",
         "sass/modules/_buttons.scss",
         "sass/modules/_modals.scss",
+        "sass/modules/_slider-ui.scss",
+        "sass/modules/_waves.scss",
+        "sass/modules/_page-title.scss",
         "sass/modules/_top-panel.scss",
         "sass/modules/_aside-panel.scss",
+        "sass/modules/_footer.scss",
+        "sass/modules/_big-slider.scss",
+        "sass/modules/_work-places.scss",
+        "sass/modules/_animators.scss",
+        "sass/modules/_our-offers.scss",
+        "sass/modules/_big-video.scss",
+        "sass/modules/_additions.scss",
+        "sass/modules/_video-slider.scss",
         "sass/pages/_home.scss"
       ]
     }
