--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,6 +6,10 @@
     {
       "path": "js-dev/assets.js",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"js/assets.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "sass/main.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
@@ -57,6 +61,7 @@
         "sass/modules/_buttons.scss",
         "sass/modules/_modals.scss",
         "sass/modules/_slider-ui.scss",
+        "sass/modules/_video-play.scss",
         "sass/modules/_waves.scss",
         "sass/modules/_page-title.scss",
         "sass/modules/_top-panel.scss",
@@ -69,6 +74,10 @@
         "sass/modules/_big-video.scss",
         "sass/modules/_additions.scss",
         "sass/modules/_video-slider.scss",
+        "sass/modules/_contacts.scss",
+        "sass/modules/_about-us.scss",
+        "sass/modules/_our-clients.scss",
+        "sass/modules/_consist.scss",
         "sass/pages/_home.scss"
       ]
     }
