--- a/prepros-6.config
+++ b/prepros-6.config
@@ -78,6 +78,9 @@
         "sass/modules/_about-us.scss",
         "sass/modules/_our-clients.scss",
         "sass/modules/_consist.scss",
+        "sass/modules/_rooms-benefits.scss",
+        "sass/modules/_rooms-slider.scss",
+        "sass/modules/_form-bottom.scss",
         "sass/pages/_home.scss"
       ]
     }
