--- a/prepros-6.config
+++ b/prepros-6.config
@@ -81,6 +81,8 @@
         "sass/modules/_rooms-benefits.scss",
         "sass/modules/_rooms-slider.scss",
         "sass/modules/_form-bottom.scss",
+        "sass/modules/_service-list.scss",
+        "sass/modules/_service-benefits.scss",
         "sass/pages/_home.scss"
       ]
     }
