--- a/prepros-6.config
+++ b/prepros-6.config
@@ -83,6 +83,7 @@
         "sass/modules/_form-bottom.scss",
         "sass/modules/_service-list.scss",
         "sass/modules/_service-benefits.scss",
+        "sass/modules/_service-steps.scss",
         "sass/pages/_home.scss"
       ]
     }
