--- a/prepros-6.config
+++ b/prepros-6.config
@@ -62,6 +62,8 @@
         "sass/modules/_modals.scss",
         "sass/modules/_slider-ui.scss",
         "sass/modules/_video-play.scss",
+        "sass/modules/_pagination.scss",
+        "sass/modules/_breadcrumbs.scss",
         "sass/modules/_waves.scss",
         "sass/modules/_page-title.scss",
         "sass/modules/_top-panel.scss",
@@ -70,6 +72,7 @@
         "sass/modules/_big-slider.scss",
         "sass/modules/_work-places.scss",
         "sass/modules/_animators.scss",
+        "sass/modules/_animators-list.scss",
         "sass/modules/_our-offers.scss",
         "sass/modules/_big-video.scss",
         "sass/modules/_additions.scss",
