--- a/prepros-6.config
+++ b/prepros-6.config
@@ -87,6 +87,7 @@
         "sass/modules/_service-list.scss",
         "sass/modules/_service-benefits.scss",
         "sass/modules/_service-steps.scss",
+        "sass/modules/_foto-report.scss",
         "sass/pages/_home.scss"
       ]
     }
