--- a/prepros-6.config
+++ b/prepros-6.config
@@ -88,6 +88,7 @@
         "sass/modules/_service-benefits.scss",
         "sass/modules/_service-steps.scss",
         "sass/modules/_foto-report.scss",
+        "sass/modules/_service-info.scss",
         "sass/pages/_home.scss"
       ]
     }
