--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,7 +38,8 @@
         "js-dev/vendors/device.min.js",
         "js-dev/vendors/waypoints.js",
         "js-dev/vendors/simplebar.js",
-        "js-dev/vendors/slick.min.js"
+        "js-dev/vendors/slick.min.js",
+        "js-dev/vendors/masonry.pkgd.min.js"
       ]
     },
     {
@@ -89,6 +90,7 @@
         "sass/modules/_service-steps.scss",
         "sass/modules/_foto-report.scss",
         "sass/modules/_service-info.scss",
+        "sass/modules/_review-list.scss",
         "sass/pages/_home.scss"
       ]
     }
