--- a/prepros-6.config
+++ b/prepros-6.config
@@ -14,8 +14,7 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "sass",
-      "js-dev"
+      "sass"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -91,6 +90,7 @@
         "sass/modules/_foto-report.scss",
         "sass/modules/_service-info.scss",
         "sass/modules/_review-list.scss",
+        "sass/modules/_prices.scss",
         "sass/pages/_home.scss"
       ]
     }
