Part of Promo Inner, some fix

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -91,6 +91,7 @@
         "sass/modules/_service-info.scss",
         "sass/modules/_review-list.scss",
         "sass/modules/_prices.scss",
+        "sass/modules/_promo-info.scss",
         "sass/pages/_home.scss"
       ]
     }
